# competitive-programming

./: .gitignore  CMakeLists.txt  README.md
problems/atcoder/arc084/: D.cpp
problems/codeforces/1012/: B.cpp
problems/codeforces/1024/: C.cpp
problems/codeforces/1025/: C.cpp  D.cpp
problems/codeforces/1027/: E.cpp
problems/codeforces/1028/: D.cpp
problems/codeforces/1029/: E.cpp
problems/codeforces/1060/: D.cpp
problems/codeforces/1102/: F.cpp
problems/codeforces/1103/: B.cpp
problems/codeforces/1114/: E.cpp
problems/codeforces/1118/: C.cpp
problems/codeforces/1132/: F.cpp
problems/codeforces/1144/: E.cpp
problems/codeforces/1147/: C.cpp
problems/codeforces/1185/: E.cpp
problems/codeforces/1190/: B.cpp
problems/codeforces/1198/: A.cpp  C.cpp
problems/codeforces/1204/: D1.cpp
problems/codeforces/1208/: C.cpp
problems/codeforces/1213/: G.cpp
problems/codeforces/1215/: E.cpp
problems/codeforces/1220/: D.cpp
problems/codeforces/1241/: B.cpp
problems/codeforces/1242/: B.cpp
problems/codeforces/1249/: D1.cpp  D2.cpp
problems/codeforces/1250/: J.cpp
problems/codeforces/1254/: A.cpp
problems/codeforces/126/: C.cpp
problems/codeforces/1272/: E.cpp
problems/codeforces/1280/: C.cpp
problems/codeforces/1288/: D.cpp  D_2.cpp
problems/codeforces/1294/: D.cpp
problems/codeforces/1299/: C.cpp
problems/codeforces/1307/: D.cpp
problems/codeforces/1311/: D.cpp
problems/codeforces/1320/: B.cpp
problems/codeforces/1326/: D2.cpp
problems/codeforces/1333/: D.cpp
problems/codeforces/1334/: D.cpp
problems/codeforces/1335/: E2.cpp
problems/codeforces/1336/: A.cpp
problems/codeforces/1349/: C.cpp
problems/codeforces/1369/: D.cpp
problems/codeforces/1379/: C.cpp
problems/codeforces/1385/: E.cpp
problems/codeforces/1393/: D.cpp
problems/codeforces/1413/: D.cpp
problems/codeforces/1415/: D.cpp
problems/codeforces/1416/: C.cpp
problems/codeforces/1423/: B.cpp
problems/codeforces/1439/: A2.cpp
problems/codeforces/1451/: E1.cpp
problems/codeforces/1470/: D.cpp
problems/codeforces/1475/: D.cpp  F.cpp
problems/codeforces/1490/: G.cpp
problems/codeforces/1492/: D.cpp
problems/codeforces/1494/: E.cpp
problems/codeforces/1495/: B.cpp
problems/codeforces/1508/: A.cpp
problems/codeforces/1511/: E.cpp
problems/codeforces/1513/: C.cpp
problems/codeforces/1527/: B1.cpp  B2.cpp
problems/codeforces/1574/: D.cpp
problems/codeforces/1607/: F.cpp  g.txt
problems/codeforces/1618/: E.cpp
problems/codeforces/1619/: D.cpp  F.cpp
problems/codeforces/1620/: D.cpp
problems/codeforces/1624/: F.cpp
problems/codeforces/1634/: D.cpp  D_1.cpp
problems/codeforces/1637/: D.cpp
problems/codeforces/1646/: D.cpp
problems/codeforces/1651/: D.cpp
problems/codeforces/1656/: D.cpp
problems/codeforces/1658/: D1.cpp
problems/codeforces/1661/: D.cpp
problems/codeforces/1665/: D.cpp
problems/codeforces/1671/: E.cpp
problems/codeforces/1680/: C.cpp
problems/codeforces/1684/: D.cpp  E.cpp
problems/codeforces/1690/: G.cpp
problems/codeforces/1729/: G.cpp
problems/codeforces/1753/: C.cpp
problems/codeforces/1763/: C.cpp
problems/codeforces/1764/: D.cpp
problems/codeforces/204/: C.cpp
problems/codeforces/213/: B.cpp
problems/codeforces/223/: C.cpp
problems/codeforces/250/: D.cpp
problems/codeforces/258/: C.cpp
problems/codeforces/264/: C.cpp
problems/codeforces/269/: C.cpp
problems/codeforces/276/: D.cpp
problems/codeforces/336/: C.cpp
problems/codeforces/337/: D.cpp
problems/codeforces/353/: C.cpp
problems/codeforces/372/: B.cpp
problems/codeforces/387/: E.cpp
problems/codeforces/388/: C.cpp
problems/codeforces/412/: D.cpp
problems/codeforces/451/: D.cpp
problems/codeforces/453/: C.cpp
problems/codeforces/455/: B.cpp
problems/codeforces/463/: D.cpp
problems/codeforces/478/: C.cpp  D.cpp
problems/codeforces/487/: B.cpp  C.cpp
problems/codeforces/5/: C.cpp
problems/codeforces/533/: C.cpp
problems/codeforces/545/: E.cpp
problems/codeforces/547/: B.cpp
problems/codeforces/552/: C.cpp
problems/codeforces/557/: C.cpp  D.cpp
problems/codeforces/585/: A.cpp
problems/codeforces/600/: D.cpp
problems/codeforces/610/: C.cpp
problems/codeforces/615/: C.cpp
problems/codeforces/623/: A.cpp  A_1.cpp
problems/codeforces/630/: Q.cpp
problems/codeforces/633/: D.cpp
problems/codeforces/659/: F.cpp
problems/codeforces/681/: D.cpp
problems/codeforces/696/: C.cpp
problems/codeforces/71/: A.cpp
problems/codeforces/761/: E.cpp
problems/codeforces/785/: C.cpp
problems/codeforces/804/: C.cpp
problems/codeforces/839/: B.cpp
problems/codeforces/847/: K.cpp
problems/codeforces/852/: E.cpp
problems/codeforces/875/: C.cpp
problems/codeforces/894/: D.cpp
problems/codeforces/900/: D.cpp
problems/codeforces/911/: E.cpp
problems/codeforces/95/: B.cpp
problems/codeforces/960/: F.cpp
problems/codeforces/965/: C.cpp
problems/codeforces/975/: D.cpp
problems/codeforces/978/: G.cpp
problems/codeforces/980/: D.cpp
problems/codeforces/985/: D.cpp
problems/usaco/2020-dec/gold/: 1.cpp
problems/ys/queue_composite/: queue_composite.cpp
