cmake_minimum_required(VERSION 3.22)
project(competitive_programming)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -D_GLIBCXX_DEBUG")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--stack,256000000")

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_executable(atcoder_arc084_D problems/atcoder/arc084/D.cpp)

add_executable(cf_5_C problems/codeforces/5/C.cpp)
add_executable(cf_71_A problems/codeforces/71/A.cpp)
add_executable(cf_95_B problems/codeforces/95/B.cpp)
add_executable(cf_126_C problems/codeforces/126/C.cpp)
add_executable(cf_204_C problems/codeforces/204/C.cpp)
add_executable(cf_213_B problems/codeforces/213/B.cpp)
add_executable(cf_223_C problems/codeforces/223/C.cpp)
add_executable(cf_250_D problems/codeforces/250/D.cpp)
add_executable(cf_258_C problems/codeforces/258/C.cpp)
add_executable(cf_264_C problems/codeforces/264/C.cpp)
add_executable(cf_276_D problems/codeforces/276/D.cpp)
add_executable(cf_336_C problems/codeforces/336/C.cpp)
add_executable(cf_337_D problems/codeforces/337/D.cpp)
add_executable(cf_353_C problems/codeforces/353/C.cpp)
add_executable(cf_372_B problems/codeforces/372/B.cpp)
add_executable(cf_388_C problems/codeforces/388/C.cpp)
add_executable(cf_412_D problems/codeforces/412/D.cpp)
add_executable(cf_451_D problems/codeforces/451/D.cpp)
add_executable(cf_453_C problems/codeforces/453/C.cpp)
add_executable(cf_455_B problems/codeforces/455/B.cpp)
add_executable(cf_463_D problems/codeforces/463/D.cpp)
add_executable(cf_478_C problems/codeforces/478/C.cpp)
add_executable(cf_478_D problems/codeforces/478/D.cpp)
add_executable(cf_487_B problems/codeforces/487/B.cpp)
add_executable(cf_533_C problems/codeforces/533/C.cpp)
add_executable(cf_547_B problems/codeforces/547/B.cpp)
add_executable(cf_552_C problems/codeforces/552/C.cpp)
add_executable(cf_557_C problems/codeforces/557/C.cpp)
add_executable(cf_557_D problems/codeforces/557/D.cpp)
add_executable(cf_585_A problems/codeforces/585/A.cpp)
add_executable(cf_600_D problems/codeforces/600/D.cpp)
add_executable(cf_610_C problems/codeforces/610/C.cpp)
add_executable(cf_615_C problems/codeforces/615/C.cpp)
add_executable(cf_623_A problems/codeforces/623/A.cpp)
add_executable(cf_623_A_1 problems/codeforces/623/A_1.cpp)
add_executable(cf_630_Q problems/codeforces/630/Q.cpp)
add_executable(cf_633_D problems/codeforces/633/D.cpp)
add_executable(cf_659_F problems/codeforces/659/F.cpp)
add_executable(cf_681_D problems/codeforces/681/D.cpp)
add_executable(cf_696_C problems/codeforces/696/C.cpp)
add_executable(cf_761_E problems/codeforces/761/E.cpp)
add_executable(cf_785_C problems/codeforces/785/C.cpp)
add_executable(cf_804_C problems/codeforces/804/C.cpp)
add_executable(cf_839_B problems/codeforces/839/B.cpp)
add_executable(cf_847_K problems/codeforces/847/K.cpp)
add_executable(cf_852_E problems/codeforces/852/E.cpp)
add_executable(cf_900_D problems/codeforces/900/D.cpp)
add_executable(cf_911_E problems/codeforces/911/E.cpp)
add_executable(cf_960_F problems/codeforces/960/F.cpp)
add_executable(cf_965_C problems/codeforces/965/C.cpp)
add_executable(cf_975_D problems/codeforces/975/D.cpp)
add_executable(cf_978_G problems/codeforces/978/G.cpp)
add_executable(cf_980_D problems/codeforces/980/D.cpp)
add_executable(cf_985_D problems/codeforces/985/D.cpp)
add_executable(cf_1012_B problems/codeforces/1012/B.cpp)
add_executable(cf_1024_C problems/codeforces/1024/C.cpp)
add_executable(cf_1025_C problems/codeforces/1025/C.cpp)
add_executable(cf_1025_D problems/codeforces/1025/D.cpp)
add_executable(cf_1027_E problems/codeforces/1027/E.cpp)
add_executable(cf_1060_D problems/codeforces/1060/D.cpp)
add_executable(cf_1102_F problems/codeforces/1102/F.cpp)
add_executable(cf_1103_B problems/codeforces/1103/B.cpp)
add_executable(cf_1118_C problems/codeforces/1118/C.cpp)
add_executable(cf_1132_F problems/codeforces/1132/F.cpp)
add_executable(cf_1144_E problems/codeforces/1144/E.cpp)
add_executable(cf_1147_C problems/codeforces/1147/C.cpp)
add_executable(cf_1185_E problems/codeforces/1185/E.cpp)
add_executable(cf_1190_B problems/codeforces/1190/B.cpp)
add_executable(cf_1198_A problems/codeforces/1198/A.cpp)
add_executable(cf_1198_C problems/codeforces/1198/C.cpp)
add_executable(cf_1204_D1 problems/codeforces/1204/D1.cpp)
add_executable(cf_1208_C problems/codeforces/1208/C.cpp)
add_executable(cf_1213_G problems/codeforces/1213/G.cpp)
add_executable(cf_1220_D problems/codeforces/1220/D.cpp)
add_executable(cf_1241_B problems/codeforces/1241/B.cpp)
add_executable(cf_1242_B problems/codeforces/1242/B.cpp)
add_executable(cf_1249_D1 problems/codeforces/1249/D1.cpp)
add_executable(cf_1249_D2 problems/codeforces/1249/D2.cpp)
add_executable(cf_1250_J problems/codeforces/1250/J.cpp)
add_executable(cf_1254_A problems/codeforces/1254/A.cpp)
add_executable(cf_1272_E problems/codeforces/1272/E.cpp)
add_executable(cf_1280_C problems/codeforces/1280/C.cpp)
add_executable(cf_1288_D problems/codeforces/1288/D.cpp)
add_executable(cf_1288_D_2 problems/codeforces/1288/D_2.cpp)
add_executable(cf_1294_D problems/codeforces/1294/D.cpp)
add_executable(cf_1299_C problems/codeforces/1299/C.cpp)
add_executable(cf_1307_D problems/codeforces/1307/D.cpp)
add_executable(cf_1311_D problems/codeforces/1311/D.cpp)
add_executable(cf_1320_B problems/codeforces/1320/B.cpp)
add_executable(cf_1326_D2 problems/codeforces/1326/D2.cpp)
add_executable(cf_1333_D problems/codeforces/1333/D.cpp)
add_executable(cf_1334_D problems/codeforces/1334/D.cpp)
add_executable(cf_1335_E2 problems/codeforces/1335/E2.cpp)
add_executable(cf_1336_A problems/codeforces/1336/A.cpp)
add_executable(cf_1349_C problems/codeforces/1349/C.cpp)
add_executable(cf_1369_D problems/codeforces/1369/D.cpp)
add_executable(cf_1379_C problems/codeforces/1379/C.cpp)
add_executable(cf_1385_E problems/codeforces/1385/E.cpp)
add_executable(cf_1413_D problems/codeforces/1413/D.cpp)
add_executable(cf_1415_D problems/codeforces/1415/D.cpp)
add_executable(cf_1416_C problems/codeforces/1416/C.cpp)
add_executable(cf_1423_B problems/codeforces/1423/B.cpp)
add_executable(cf_1439_A2 problems/codeforces/1439/A2.cpp)
add_executable(cf_1451_E1 problems/codeforces/1451/E1.cpp)
add_executable(cf_1470_D problems/codeforces/1470/D.cpp)
add_executable(cf_1475_D problems/codeforces/1475/D.cpp)
add_executable(cf_1475_F problems/codeforces/1475/F.cpp)
add_executable(cf_1490_G problems/codeforces/1490/G.cpp)
add_executable(cf_1492_D problems/codeforces/1492/D.cpp)
add_executable(cf_1494_E problems/codeforces/1494/E.cpp)
add_executable(cf_1495_B problems/codeforces/1495/B.cpp)
add_executable(cf_1508_A problems/codeforces/1508/A.cpp)
add_executable(cf_1511_E problems/codeforces/1511/E.cpp)
add_executable(cf_1513_C problems/codeforces/1513/C.cpp)
add_executable(cf_1527_B1 problems/codeforces/1527/B1.cpp)
add_executable(cf_1527_B2 problems/codeforces/1527/B2.cpp)
add_executable(cf_1574_D problems/codeforces/1574/D.cpp)
add_executable(cf_1618_E problems/codeforces/1618/E.cpp)
add_executable(cf_1619_D problems/codeforces/1619/D.cpp)
add_executable(cf_1619_F problems/codeforces/1619/F.cpp)
add_executable(cf_1620_D problems/codeforces/1620/D.cpp)
add_executable(cf_1624_F problems/codeforces/1624/F.cpp)
add_executable(cf_1634_D problems/codeforces/1634/D.cpp)
add_executable(cf_1634_D_1 problems/codeforces/1634/D_1.cpp)
add_executable(cf_1637_D problems/codeforces/1637/D.cpp)
add_executable(cf_1646_D problems/codeforces/1646/D.cpp)
add_executable(cf_1651_D problems/codeforces/1651/D.cpp)
add_executable(cf_1656_D problems/codeforces/1656/D.cpp)
add_executable(cf_1658_D1 problems/codeforces/1658/D1.cpp)
add_executable(cf_1661_D problems/codeforces/1661/D.cpp)
add_executable(cf_1665_D problems/codeforces/1665/D.cpp)
add_executable(cf_1671_E problems/codeforces/1671/E.cpp)
add_executable(cf_1680_C problems/codeforces/1680/C.cpp)
add_executable(cf_1684_D problems/codeforces/1684/D.cpp)
add_executable(cf_1690_G problems/codeforces/1690/G.cpp)
add_executable(cf_1753_C problems/codeforces/1753/C.cpp)
add_executable(cf_1763_C problems/codeforces/1763/C.cpp)
add_executable(cf_1764_D problems/codeforces/1764/D.cpp)

add_executable(usaco_2020_dec_gold_1 problems/usaco/2020-dec/gold/1.cpp)

add_executable(ys_queue_composite problems/ys/queue_composite/queue_composite.cpp)